# wordle-helper-rs

./: Cargo.toml  README.md
data/: dictionary.json  problems.json
src/: game.rs  main.rs  types.rs  words.rs
src/game/: evaluate.rs
src/helpers/: logger.rs  mod.rs  pretty_print.rs  pretty_print_result.rs  types.rs  words.rs
src/player/: filter.rs  guesser.rs  logic.rs  mod.rs  online.rs  player.rs
