[package]
name = "wordler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1.0"
termion = { git = "https://gitlab.redox-os.org/Jezza/termion.git", branch = "windows-support" }
